scss/main.scss
@import 'MyFontsWebfontsKit.css';

html, body, .full {
  height: 100%;
  font-family: 'ProximaNovaA-Regular', sans-serif;
}

.vertical {
  height: 100%;
  float: left;
  transition: background-image 3s linear;
}
.absolute-center {
  position: absolute;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}
.details {
  width: 23%;
  min-width: 200px;
  max-width: 250px;
  height: 331px;
  background: #F9F4F0;
  padding: 32px 25px 0px 25px;

  a {
    color: black;
  }

  .logo {
    width: 180px;
    display: table;
    margin: 0 auto;
  }

  .text {
    max-width: 180px;
    margin: 0 auto;
    display: table;
    padding: 0 10px;
  }

  .address {
    text-align: right;
  }

  .phone {
    margin-bottom: 0px;
  }
  .email {
    margin-top: 0px;
  }
}

.left, .right {
  width: 33%;
}
.middle {
  width: 34%;
}

.middle {
  //min-width: 269px;
  background: url("../images/background.jpg") repeat;
  background-size: cover;
}
.left {
  background: url("../images/l5.jpg") no-repeat;
  background-size: cover;
}
.right {
  background: url("../images/r5.jpg") no-repeat;
  background-size: cover;
}

@media only screen and (max-width: 900px) {
  .left, .right {
    width: 30%;
  }
  .middle {
    width: 40%;
  }

  .details {
    .text {
      padding: 0 12px;
    }
  }
}
@media only screen and (max-width: 780px) {
  .left, .right {
    width: 23%;
  }
  .middle {
    width: 54%;
  }
}

@media only screen and (max-width: 520px) {
  .left, .right {
    width: 22%;
  }
  .middle {
    width: 56%;
  }
}

@media only screen and (max-width: 480px) {
  .left, .right {
    display: none;
  }
  .middle {
    width: 100%;
    height: 100%;
  }
  .details {
    .phone {
      margin-bottom: 1em;
    }
    .email {
      margin-top: 1em;
    }
  }

}

@media only screen and (max-height: 400px) {
  .details {
    height: 280px !important;
    padding-top: 0px !important;
  }
}

